syntax = "proto3";

package test.common.http;

import "google/protobuf/wrappers.proto";

// Structured input for server_codec_diff_fuzz_test.

message ServerCodecDiffFuzzTestCase {
  message Configuration {
    bool normalize_path = 1;
  }

  message HttpHeader {
    bytes key = 1;
    bytes value = 2;
  }

  message Request {
    google.protobuf.BytesValue scheme = 1;
    google.protobuf.BytesValue method = 2;
    google.protobuf.BytesValue path = 3;
    google.protobuf.BytesValue authority = 4;
    google.protobuf.BytesValue protocol = 5;
    repeated HttpHeader headers = 6;
  }

  // Response is only sent if codec successfully parsed request
  message Response {
    google.protobuf.BytesValue status = 1;
    repeated HttpHeader headers = 2;
  }

  Configuration configuration = 1;
  Request request = 2;
  Response response = 3;
}
